fix overflow of header

--- a/app/assets/sass/patterns/_cards.scss
+++ b/app/assets/sass/patterns/_cards.scss
@@ -11,7 +11,9 @@ html {
 }
 
 .page-title-header {
-  margin-top: -70px
+  margin-top: -70px;
+  width:100%;
+  padding-right:15px
 }
 
 .choice-title, .choice-body{
